--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
 						<h2>My Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target= "_blank" class="image fit thumb "><img src="images/thumbs/dengue dashboard.jpg" alt="" /></a>
+								<a href="project_articles/generic.html" target= "_blank" class="image fit thumb "><img src="images/thumbs/dengue dashboard.jpg" alt="" /></a>
 								<h3>Dengue Dashboard Philippines</h3>
 								<p>A visualization of Dengue cases in the Philippines from 2016-2020, sourced from the Department of Health (DOH).</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://en.wikipedia.org/wiki/Philippines" target= "_blank" class="image fit thumb"><img src="images/thumbs/housing market dashboard.jpg" alt="" /></a>
+								<a href="project_articles/generic_2.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/housing market dashboard.jpg" alt="" /></a>
 								<h3>Metro Manila Housing Market Analysis</h3>
 								<p>A visualization of real estate market in Metro Manila, Philippines, sourced from lamudi website.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target= "_blank" class="image fit thumb"><img src="images/thumbs/Sales store.jpg" alt="" /></a>
+								<a href="project_articles/generic_3.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/Sales store.jpg" alt="" /></a>
 								<h3>Sales Store Dashboard</h3>
 								<p>A visualization of sales and segments from a retail store.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://en.wikipedia.org/wiki/Philippines" target= "_blank" class="image fit thumb"><img src="images/thumbs/Video game analysis.jpg" alt="" /></a>
+								<a href="project_articles/generic_4.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/Video game analysis.jpg" alt="" /></a>
 								<h3>Video Games Global Sales Analysis</h3>
 								<p>An exploratory analysis on the video games sales from 1980 to 2010s gloablly.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://en.wikipedia.org/wiki/Philippines" target= "_blank" class="image fit thumb"><img src="images/thumbs/job front.jpg" alt="" /></a>
+								<a href="project_articles/generic_5.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/job front.jpg" alt="" /></a>
 								<h3>Analysis of Salaries from Job Postings in LinkedIn</h3>
 								<p>An exploratory analysis on the listed salaries from job postings in LinkedIn.</p>
 							<!-- </article>
@@ -438,12 +438,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-LinkedIn"><span class="label">LinkedIn</span></a></li> -->
-						<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target= "_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/iellmarbarroga" target= "_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/iellmar-barroga/" target= "_blank" class="icon brands fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 					<a> </a>
 					<ul class="copyright">
-						<li>barroga.iig@gmail.com  | <a href="https://drive.google.com/file/d/1G9DAxeX3J58gO1f-ZOWDN2AepSEPlGtr/view?usp=drive_link" target= "_blank">  Download CV</a></li>
+						<li>barroga.iig@gmail.com</li><li><a href="https://drive.google.com/file/d/1G9DAxeX3J58gO1f-ZOWDN2AepSEPlGtr/view?usp=drive_link" target= "_blank">CV</a></li>
 					</ul>
 				</div>
 			</footer>
