--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Barroga Data Analyst Portfolio</title>
+		<title>Barroga DA Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+
 	<body class="is-preload">
-	
+
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar" style="width: 140px; height: auto;"><img src="images/avatar_pic.JPG" alt=""></a>
-					<h1>Hello, I'm <strong>Iellmar Isagani Barroga</strong>, <br />
+					<h1>Hello! I'm <strong>Iellmar Isagani Barroga</strong>, <br />
 					a data analyst committed to growth and continuous learning</h1>
 				</div>
 			</header>
@@ -28,9 +25,29 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>A Bit About Me</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>I’m a Data Analyst with experience on leveraging data to drive informed decision-making. Proficient in SQL, Power BI, Excel, Power Query, Power Pivot, and Python, I enjoy uncovering insights and solving complex problems through data analysis and visualization. With a strong commitment to continuous learning, I’m excited to apply my skills to help businesses make data-driven choices and unlock growth opportunities.</p>
+						<p style="font-size:large;">I'm a licensed civil engineer who loves learning and solving puzzles. Utilizing skills in SQL, Python, Power BI, and Excel, I'm ready to leap into the field of data analytics, analyzing and leveraging data for insights that can create meaningful impacts.</p>
+
+						<!-- Logos for tech skills -->
+						<div style="margin-bottom: -3%;">
+							<div class="logo-container">
+								<img src="images/sql_logo2.png" alt="SQL Logo">
+								<div class="overlay"></div>
+							</div>
+							<div class="logo-container">
+								<img src="images/python_logo2.png" alt="Python Logo">
+								<div class="overlay"></div>
+							</div>
+							<div class="logo-container">
+								<img src="images/pbi_logo2.png" alt="Power BI Logo">
+								<div class="overlay"></div>
+							</div>
+							<div class="logo-container">
+								<img src="images/excel_logo2.png" alt="Excel Logo">
+								<div class="overlay"></div>
+							</div>
+						</div>
 
 					</section>
 
@@ -39,29 +56,29 @@
 						<h2>My Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="project_articles/generic.html" target= "_blank" class="image fit thumb "><img src="images/thumbs/dengue dashboard.jpg" alt="" /></a>
-								<h3>Dengue Dashboard Philippines</h3>
-								<p>A visualization of Dengue cases in the Philippines from 2016-2020, sourced from the Department of Health (DOH).</p>
+								<a href="project_articles/dengue-dashboard.html" target= "_blank" class="image fit thumb "><img src="images/thumbs/dengue dashboard.jpg" alt="" /></a>
+								<h3>Visualizing Dengue Trends in the Philippines: A Power BI Dashboard Analysis</h3>
+								<p>Exploring Key Metrics, Seasonal Patterns, and Regional Insights from Five Years of Dengue Data in the country</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="project_articles/generic_2.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/housing market dashboard.jpg" alt="" /></a>
-								<h3>Metro Manila Housing Market Analysis</h3>
-								<p>A visualization of real estate market in Metro Manila, Philippines, sourced from lamudi website.</p>
+								<a href="project_articles/housing-market-dashboard.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/housing market dashboard.jpg" alt="" /></a>
+								<h3>Analyzing the Housing Market in Metro Manila: Insights from Power BI</h3>
+								<p>Understanding housing market insights in the capital region and largest metropolitan area of the Philippines</p>
+							</article>
+							<!-- <article class="col-6 col-12-xsmall work-item">
+								<a href="project_articles/sales-dashboard.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/Sales store.jpg" alt="" /></a>
+								<h3>Analysis of Retail Store Sales Data: A Power BI Dashboard Project</h3>
+								<p>Exploration of Sales Trends, Customer Behavior, and Product Performance Metrics using Power BI</p>
+							</article> -->
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="project_articles/video-games-analysis.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/Video game analysis.jpg" alt="" /></a>
+								<h3>Analyzing Global Video Game Sales: Trends and Insights</h3>
+								<p>Exploring Patterns in the Video Game Market from 1980s to 2010s Through Data Analysis</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="project_articles/generic_3.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/Sales store.jpg" alt="" /></a>
-								<h3>Sales Store Dashboard</h3>
-								<p>A visualization of sales and segments from a retail store.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="project_articles/generic_4.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/Video game analysis.jpg" alt="" /></a>
-								<h3>Video Games Global Sales Analysis</h3>
-								<p>An exploratory analysis on the video games sales from 1980 to 2010s gloablly.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="project_articles/generic_5.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/job front.jpg" alt="" /></a>
-								<h3>Analysis of Salaries from Job Postings in LinkedIn</h3>
-								<p>An exploratory analysis on the listed salaries from job postings in LinkedIn.</p>
+								<a href="project_articles/salaries-analysis.html" target= "_blank" class="image fit thumb"><img src="images/thumbs/job front.jpg" alt="" /></a>
+								<h3> Navigating High-Paying Careers: An Analysis of Salary Trends</h3>
+								<p>Analyzing 2023-2024 LinkedIn Job Postings to Uncover Salary Patterns by Role and Industry.</p>
 							<!-- </article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
@@ -72,7 +89,7 @@
 						<!-- <ul class="actions"> 
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul> -->
-					</section>
+					<!-- </section> -->
 
 				<!-- Three -->
 					<!-- <section id="three">
@@ -109,8 +126,8 @@
 									</li>
 								</ul>
 							</div>
-						</div>
-					</section> -->
+						</div> 
+					</section>  -->
 
 				<!-- Four -->
 				<!--
@@ -443,7 +460,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</ul>
 					<a> </a>
 					<ul class="copyright">
-						<li>barroga.iig@gmail.com</li><li><a href="https://drive.google.com/file/d/1G9DAxeX3J58gO1f-ZOWDN2AepSEPlGtr/view?usp=drive_link" target= "_blank">CV</a></li>
+						<li> <a class="icon solid fa-envelope"><span class="label">Email</span> barroga.iig@gmail.com</a></li> 
+						<li><a href="https://drive.google.com/file/d/1G9DAxeX3J58gO1f-ZOWDN2AepSEPlGtr/view?usp=drive_link" target= "_blank">CV</a></li>
 					</ul>
 				</div>
 			</footer>
