--- a/project_articles/housing-market-dashboard.html
+++ b/project_articles/housing-market-dashboard.html
@@ -27,7 +27,7 @@
 						<p>Understanding housing market insights in the capital region and largest metropolitan area of the Philippines</p>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="../images/pic01.jpg" alt="" /></span>
+						<!-- <span class="image featured"><img src="../images/pic01.jpg" alt="" /></span> -->
 						<h3>Introduction</h3>
 						<p>Understanding housing trends is essential for buyers and investors. This article presents an analysis of the housing market in Metro Manila, utilizing a dataset sourced from the Lamudi platform. By employing <strong>Power BI</strong> for visualization and <strong>Python</strong> for data cleaning, I take the challenge of revealing key insights into property listings and market trends.</p>
 			
