--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar" style="width: 140px; height: auto;"><img src="images/avatar_pic.JPG" alt=""></a>
 					<h1>Hello! I'm <strong>Iellmar Isagani Barroga</strong>, <br />
-					a data analyst committed to growth and continuous learning</h1>
+					a data analyst skilled in transforming and visualizing data to uncover actionable insights</h1>
 				</div>
 			</header>
 
@@ -27,7 +27,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p style="font-size:large;">I'm a licensed civil engineer who loves learning and solving puzzles. Utilizing skills in SQL, Python, Power BI, and Excel, I'm ready to leap into the field of data analytics, analyzing and leveraging data for insights that can create meaningful impacts.</p>
+						<p style="font-size:large;">I'm a licensed civil engineer with a background in tackling complex site challenges. Utilizing skills in SQL, Python, Power BI, and Excel, I'm ready to transition into the field of data analytics. Through my projects, I have demonstrated the ability to clean, transform, visualize, and interpret data using advanced analytics tools to extract insights that can drive informed decision-making.</p>
 
 						<!-- Logos for tech skills -->
 						<div style="margin-bottom: -3%;">
