--- a/project_articles/housing-market-dashboard.html
+++ b/project_articles/housing-market-dashboard.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>MM housing article</title>
+		<title>Metro Manila Housing Market Dashboard</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets_2/css/main.css" />
@@ -119,13 +119,14 @@
 					</ul>
 					<ul class="copyright">
 						<li> <a class="icon solid fa-envelope"><span class="label">Email</span> barroga.iig@gmail.com</a></li> 
-						<li><a href="https://drive.google.com/file/d/1G9DAxeX3J58gO1f-ZOWDN2AepSEPlGtr/view?usp=drive_link" target= "_blank">CV</a></li> 
+						<li><a class="cv-link" href="#" target= "_blank">CV</a></li> 
 					</ul>
 				</footer>
 
 		</div>
 
 		<!-- Scripts
+			<script src="../assets/js/cv-link.js"></script>
 			<script src="assets_2/js/jquery.min.js"></script>
 			<script src="assets_2/js/jquery.dropotron.min.js"></script>
 			<script src="assets_2/js/jquery.scrollex.min.js"></script>
@@ -133,6 +134,9 @@
 			<script src="assets_2/js/breakpoints.min.js"></script>
 			<script src="assets_2/js/util.js"></script>
 			<script src="assets_2/js/main.js"></script> -->
+			
+			<!-- Script for the CV link -->
+			<script src="../assets/js/cv-link.js"></script>
 
 	</body>
 </html>
