--- a/project_articles/sales-dashboard.html
+++ b/project_articles/sales-dashboard.html
@@ -131,7 +131,7 @@
 					</ul>
 					<ul class="copyright">
 						<li> <a class="icon solid fa-envelope"><span class="label">Email</span> barroga.iig@gmail.com</a></li> 
-						<li><a href="https://drive.google.com/file/d/1G9DAxeX3J58gO1f-ZOWDN2AepSEPlGtr/view?usp=drive_link" target= "_blank">CV</a></li> 
+						<li><a class="cv-link" href="#" target= "_blank">CV</a></li> 
 					</ul>
 				</footer>
 
@@ -145,6 +145,9 @@
 			<script src="assets_2/js/breakpoints.min.js"></script>
 			<script src="assets_2/js/util.js"></script>
 			<script src="assets_2/js/main.js"></script> -->
+
+			<!-- Script for the CV link -->
+			<script src="../assets/js/cv-link.js"></script>
 
 	</body>
 </html>
