--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Barroga DA Portfolio</title>
+		<title>Data Analysis Portfolio by Iellmar Barroga</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -461,7 +461,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<a> </a>
 					<ul class="copyright">
 						<li> <a class="icon solid fa-envelope"><span class="label">Email</span> barroga.iig@gmail.com</a></li> 
-						<li><a href="https://drive.google.com/file/d/1G9DAxeX3J58gO1f-ZOWDN2AepSEPlGtr/view?usp=drive_link" target= "_blank">CV</a></li>
+						<li><a class="cv-link" href="#" target= "_blank">CV</a></li>
 					</ul>
 				</div>
 			</footer>
@@ -473,6 +473,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/cv-link.js"></script>
 
 	</body>
 </html>
