--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 							</div>
 						</div>
 
+						<ul class="actions"> 
+							<li><a style="margin-top: 50px; margin-bottom: -20px;" href="https://www.datacamp.com/portfolio/barrogaiig" target= "_blank" class="button">View DataCamp Certifications</a></li>
+						</ul>
+
 					</section>
 
 				<!-- Two -->
@@ -89,7 +93,7 @@
 						<!-- <ul class="actions"> 
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul> -->
-					<!-- </section> -->
+					</section>
 
 				<!-- Three -->
 					<!-- <section id="three">
