--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<p style="font-size:large;">I'm a licensed civil engineer with a background in tackling complex site challenges. Utilizing skills in SQL, Python, Power BI, and Excel, I'm ready to transition into the field of data analytics. Through my projects, I have demonstrated the ability to clean, transform, visualize, and interpret data using advanced analytics tools to extract insights that can drive informed decision-making.</p>
 
 						<!-- Logos for tech skills -->
-						<div style="margin-bottom: -3%;">
+						<div>
 							<div class="logo-container">
 								<img src="images/sql_logo2.png" alt="SQL Logo">
 								<div class="overlay"></div>
@@ -50,7 +50,7 @@
 						</div>
 
 						<ul class="actions"> 
-							<li><a style="margin-top: 50px; margin-bottom: -20px;" href="https://www.datacamp.com/portfolio/barrogaiig" target= "_blank" class="button">View DataCamp Certifications</a></li>
+							<li><a style="margin-top: 10%;" href="https://www.datacamp.com/portfolio/barrogaiig" target= "_blank" class="button">View DataCamp Certifications</a></li>
 						</ul>
 
 					</section>
