--- a/project_articles/housing-market-dashboard.html
+++ b/project_articles/housing-market-dashboard.html
@@ -45,6 +45,11 @@
 								</ul>
 								<p>Data cleaning was conducted using <strong>Power Query</strong> and <strong>Python</strong>, encompassing several key steps. First, city names were extracted from the Location column to enable city/municipality identification. Next, a mapping was created to filter the dataset for listings specifically within Metro Manila. Additionally, properties were categorized into housing types and storey levels by identifying relevant keywords in the Description column. Finally, to address the 3% of missing values in the Price column, median prices by city were calculated and imputed using Python, ensuring a more robust dataset for analysis.</p>
 
+								<!-- This line is use to insert image -->
+								<p style="margin-top: 0%; margin-bottom: 2%;" class="image featured">
+									<img src="project images/p-i-2/python_script_median_imputation.png" alt="" class="responsive-image" >
+								</p>
+								
 								<h3>KPIs</h3>
 								<p>To provide a concise overview, I included four critical KPIs in the dashboard:</p>
 								<ol style="margin-left: 2%; margin-bottom: 2%">
