--- a/project_articles/dengue-dashboard.html
+++ b/project_articles/dengue-dashboard.html
@@ -31,7 +31,7 @@
 					<div class="box">
 						<!-- <span class="image featured"><img src="../images/pic01.jpg" alt="" /></span> -->
 						<h3>Introduction</h3>
-						<p>One of the most pressing public health concerns in tropical countries like the Philippines is <strong>dengue fever</strong>, a mosquito-borne disease that affects thousands of individuals annually. As a data analyst, I took on the challenge of exploring the dataset on Dengue Cases in the Philippines and created a <strong>Power BI dashboard</strong> to visualize trends, patterns, and regional impacts of the disease. 
+						<p>One of the most pressing public health concerns in tropical countries like the Philippines is <strong>dengue fever</strong>, a mosquito-borne disease that affects thousands of individuals annually. For this project, I took on the challenge of exploring the dataset on Dengue Cases in the Philippines and created a <strong>Power BI dashboard</strong> to visualize trends, patterns, and regional impacts of the disease. 
 							As part of my data analyst portfolio, I analyzed five years' worth of dengue case data in the Philippines using <strong>Power BI</strong> to uncover trends and insights. This dashboard visualizes key metrics, regional patterns, and seasonal impacts.</p>
 			
 						<div class="row">
